adjustments in fix cors